# eval

./: CMakeLists.txt  README.md
code/include/: eval.hpp
code/include/eval/: Evaluator.hpp  Exception.hpp  Operand.hpp  Operation.hpp  Operator.hpp  common.hpp  exceptions.hpp
code/include/eval/ds/: Array.hpp  AssociativeArray.hpp  String.hpp  Unique.hpp  exceptions.hpp
code/src/: main.cpp
code/src/eval/: Evaluator.cpp  Operand.cpp  Operation.cpp  Operator.cpp  common.cpp  exceptions.cpp
